feat: 新增 AI 询问交互与权限设置功能
- 新增 QuestionPrompt 组件处理 AI 交互式询问
- 新增 PermissionSettings 权限设置页面
- 新增可折叠代码查看器 CollapsibleCodeViewer
- 优化 opencode 服务启动支持自动分配端口
- 移除权限默认配置，使用交互式确认流程
- 升级 @opencode-ai/sdk 至 1.1.14
- 优化代码块语言支持与工具内容展示

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -353,6 +353,45 @@
       "editDialogDescription": "Modify MCP server configuration",
       "editSuccess": "MCP server {{name}} updated",
       "refreshSuccess": "MCP server list refreshed"
+    },
+    "permission": "Permissions",
+    "permissionSettings": {
+      "title": "Permission Settings",
+      "description": "Configure default permission behavior for AI tools",
+      "loadFailed": "Failed to load permission configuration",
+      "saveFailed": "Failed to save permission configuration",
+      "refreshSuccess": "Permission configuration refreshed",
+      "refreshFailed": "Failed to refresh permission configuration",
+      "updateSuccess": "Permission updated",
+      "deleteSuccess": "Permission rule deleted",
+      "addSuccess": "Permission rule added",
+      "addSubRuleSuccess": "Sub-rule added",
+      "deleteSubRuleSuccess": "Sub-rule deleted",
+      "resetSuccess": "Reset to default permissions",
+      "restartingService": "Restarting service to apply permission configuration...",
+      "restartSuccess": "Permission configuration applied",
+      "restartFailed": "Service restart failed, permission configuration will take effect on next startup",
+      "cannotDeleteDefault": "Cannot delete default permission rule",
+      "noRules": "No permission rules",
+      "useDefault": "Use default configuration",
+      "resetToDefault": "Reset to Default",
+      "addRule": "Add Rule",
+      "addSubRule": "Add Sub-rule",
+      "addRuleTitle": "Add Permission Rule",
+      "addRuleDescription": "Configure permission behavior for specific tool types",
+      "addSubRuleTitle": "Add Sub-rule",
+      "addSubRuleDescription": "Add fine-grained permission control for {{type}}",
+      "permissionType": "Permission Type",
+      "selectType": "Select permission type",
+      "action": "Action",
+      "pattern": "Pattern",
+      "patternHint": "Supports wildcards, e.g., git *, *.ts",
+      "initializing": "Initializing service...",
+      "connectionError": "Unable to connect to service",
+      "hint1": "\"Allow\" means auto-execute, \"Ask\" means confirm before each execution, \"Deny\" means prohibit execution.",
+      "hint2": "Sub-rules can set different permissions for specific commands or file patterns, with higher priority than parent rules.",
+      "inherited": "Inherited",
+      "inheritedTooltip": "This tool is not configured separately, using default permission"
     }
   },
   "status": {
@@ -374,6 +413,21 @@
     "needsAuth": "Needs authorization",
     "needsRegistration": "Needs registration",
     "unknown": "Unknown status"
+  },
+  "questionPrompt": {
+    "otherCustom": "Other (custom input)",
+    "enterYourAnswer": "Enter your own answer",
+    "confirm": "Confirm",
+    "multipleSelection": "(multiple selection)",
+    "confirmAnswers": "Please confirm your answers",
+    "notAnswered": "(not answered)",
+    "clickToToggle": "Click to toggle",
+    "clickToSelect": "Click to select",
+    "cancel": "Cancel",
+    "submitAnswers": "Submit",
+    "currentInput": "Current input:",
+    "submit": "Submit",
+    "enterAnswer": "Enter your answer"
   },
   "errors": {
     "connectionFailed": "Connection failed",
@@ -401,5 +455,67 @@
     "serviceStarted": "Service started",
     "serviceStopped": "Service stopped",
     "languageChanged": "Language changed"
+  },
+  "permissions": {
+    "types": {
+      "default": "Default Permission",
+      "unknown": "Unknown Tool",
+      "read": "Read File",
+      "edit": "Edit File",
+      "write": "Write File",
+      "glob": "File Search",
+      "grep": "Content Search",
+      "list": "List Directory",
+      "bash": "Terminal Command",
+      "task": "Sub-task",
+      "webfetch": "Fetch Web",
+      "websearch": "Web Search",
+      "codesearch": "Code Search",
+      "todoread": "Read Tasks",
+      "todowrite": "Write Tasks",
+      "skill": "Skill Call",
+      "lsp": "LSP Operation",
+      "external_directory": "External Directory",
+      "doom_loop": "Loop Protection",
+      "invalid": "Error Handler",
+      "question": "Interactive Question",
+      "batch": "Batch Operation"
+    },
+    "descriptions": {
+      "default": "Permissions not explicitly configured will use this default value",
+      "read": "Allow AI to read file contents in the project",
+      "edit": "Allow AI to edit existing files",
+      "write": "Allow AI to create new files",
+      "glob": "Allow AI to search files using pattern matching",
+      "grep": "Allow AI to search file contents",
+      "list": "Allow AI to list directory structure",
+      "bash": "Allow AI to execute shell commands",
+      "task": "Allow AI to create sub-tasks/sub-agents",
+      "webfetch": "Allow AI to fetch web page content",
+      "websearch": "Allow AI to perform web searches",
+      "codesearch": "Allow AI to perform code searches",
+      "todoread": "Allow AI to read task lists",
+      "todowrite": "Allow AI to write task lists",
+      "skill": "Allow AI to invoke skills",
+      "lsp": "Allow AI to use language server features",
+      "external_directory": "Allow AI to access files outside the project directory",
+      "doom_loop": "Enable infinite loop protection mechanism",
+      "question": "Allow AI to ask questions to the user. This tool always requires user interaction",
+      "invalid": "Handle invalid tool calls",
+      "batch": "Allow AI to execute multiple operations in batch"
+    },
+    "actions": {
+      "allow": "Allow",
+      "ask": "Ask",
+      "deny": "Deny"
+    },
+    "groups": {
+      "file": "File Operations",
+      "execution": "Execution",
+      "network": "Network",
+      "tools": "Tools",
+      "special": "Special",
+      "other": "Other"
+    }
   }
 }
