--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -171,6 +171,7 @@
     "service": "服务",
     "provider": "AI 服务商",
     "mcp": "MCP 服务器",
+    "permission": "权限设置",
     "appearance": "外观",
     "language": "语言",
     "about": "关于",
@@ -317,7 +318,7 @@
       "connectFailed": "启用 MCP 服务器 {{name}} 失败",
       "disconnectFailed": "禁用 MCP 服务器 {{name}} 失败",
       "addSuccess": "MCP 服务器 {{name}} 已添加",
-      "hint": "MCP 服务器提供额外的工具和资源，可以扩展 AI 助手的能力。在 opencode.json 配置文件中添加更多 MCP 服务器。",
+      "hint": "MCP 服务器提供额外的工具和资源，可以扩展 AI 助手的能力。",
       "addDialogTitle": "添加 MCP 服务器",
       "addDialogDescription": "配置新的 MCP 服务器连接",
       "name": "名称",
@@ -353,6 +354,44 @@
       "editDialogDescription": "修改 MCP 服务器配置",
       "editSuccess": "MCP 服务器 {{name}} 已更新",
       "refreshSuccess": "MCP 服务器列表已刷新"
+    },
+    "permissionSettings": {
+      "title": "权限设置",
+      "description": "配置 AI 工具的默认权限行为",
+      "loadFailed": "加载权限配置失败",
+      "saveFailed": "保存权限配置失败",
+      "refreshSuccess": "权限配置已刷新",
+      "refreshFailed": "刷新权限配置失败",
+      "updateSuccess": "权限已更新",
+      "deleteSuccess": "权限规则已删除",
+      "addSuccess": "权限规则已添加",
+      "addSubRuleSuccess": "子规则已添加",
+      "deleteSubRuleSuccess": "子规则已删除",
+      "resetSuccess": "已重置为默认权限",
+      "restartingService": "正在重启服务以应用权限配置...",
+      "restartSuccess": "权限配置已生效",
+      "restartFailed": "服务重启失败，权限配置将在下次启动时生效",
+      "cannotDeleteDefault": "无法删除默认权限规则",
+      "noRules": "暂无权限规则",
+      "useDefault": "使用默认配置",
+      "resetToDefault": "重置为默认",
+      "addRule": "添加规则",
+      "addSubRule": "添加子规则",
+      "addRuleTitle": "添加权限规则",
+      "addRuleDescription": "为特定工具类型配置权限行为",
+      "addSubRuleTitle": "添加子规则",
+      "addSubRuleDescription": "为 {{type}} 添加细粒度的权限控制",
+      "permissionType": "权限类型",
+      "selectType": "选择权限类型",
+      "action": "权限动作",
+      "pattern": "匹配模式",
+      "patternHint": "支持通配符，如 git *、*.ts",
+      "initializing": "正在初始化服务...",
+      "connectionError": "无法连接到服务",
+      "hint1": "\"允许\" 表示自动执行，\"询问\" 表示每次执行前需要确认，\"拒绝\" 表示禁止执行。",
+      "hint2": "子规则可以为特定命令或文件模式设置不同的权限，优先级高于父规则。",
+      "inherited": "继承默认",
+      "inheritedTooltip": "该工具未单独配置，使用默认权限"
     }
   },
   "status": {
@@ -378,6 +417,21 @@
     "availableTools": "可用工具",
     "totalTools": "共 {{count}} 个工具",
     "noTools": "暂无可用工具"
+  },
+  "questionPrompt": {
+    "otherCustom": "其他（自定义输入）",
+    "enterYourAnswer": "输入您自己的答案",
+    "confirm": "确认",
+    "multipleSelection": "（可多选）",
+    "confirmAnswers": "请确认您的答案",
+    "notAnswered": "（未回答）",
+    "clickToToggle": "点击切换选项",
+    "clickToSelect": "点击选择",
+    "cancel": "取消",
+    "submitAnswers": "提交答案",
+    "currentInput": "当前输入:",
+    "submit": "提交",
+    "enterAnswer": "输入您的答案"
   },
   "editor": {
     "refresh": "刷新文件",
@@ -412,5 +466,67 @@
     "serviceStarted": "服务已启动",
     "serviceStopped": "服务已停止",
     "languageChanged": "语言已切换"
+  },
+  "permissions": {
+    "types": {
+      "default": "默认权限",
+      "unknown": "未知工具",
+      "read": "读取文件",
+      "edit": "编辑文件",
+      "write": "写入文件",
+      "glob": "文件搜索",
+      "grep": "内容搜索",
+      "list": "列出目录",
+      "bash": "终端命令",
+      "task": "子任务",
+      "webfetch": "获取网页",
+      "websearch": "网页搜索",
+      "codesearch": "代码搜索",
+      "todoread": "读取任务",
+      "todowrite": "写入任务",
+      "skill": "技能调用",
+      "lsp": "LSP 操作",
+      "external_directory": "外部目录",
+      "doom_loop": "循环保护",
+      "invalid": "错误处理",
+      "question": "交互式提问",
+      "batch": "批量操作"
+    },
+    "descriptions": {
+      "default": "未明确配置的权限将使用此默认值",
+      "read": "允许 AI 读取项目中的文件内容",
+      "edit": "允许 AI 编辑现有文件",
+      "write": "允许 AI 创建新文件",
+      "glob": "允许 AI 使用模式匹配搜索文件",
+      "grep": "允许 AI 搜索文件内容",
+      "list": "允许 AI 列出目录结构",
+      "bash": "允许 AI 执行 shell 命令",
+      "task": "允许 AI 创建子任务/子代理",
+      "webfetch": "允许 AI 获取网页内容",
+      "websearch": "允许 AI 进行网页搜索",
+      "codesearch": "允许 AI 进行代码搜索",
+      "todoread": "允许 AI 读取任务列表",
+      "todowrite": "允许 AI 写入任务列表",
+      "skill": "允许 AI 调用技能",
+      "lsp": "允许 AI 使用语言服务器功能",
+      "external_directory": "允许 AI 访问项目目录外的文件",
+      "doom_loop": "启用无限循环保护机制",
+      "question": "允许 AI 向用户提问。此工具执行时总是需要用户交互回答",
+      "invalid": "处理无效工具调用",
+      "batch": "允许 AI 批量执行多个操作"
+    },
+    "actions": {
+      "allow": "允许",
+      "ask": "询问",
+      "deny": "拒绝"
+    },
+    "groups": {
+      "file": "文件操作",
+      "execution": "执行操作",
+      "network": "网络操作",
+      "tools": "工具操作",
+      "special": "特殊权限",
+      "other": "其他"
+    }
   }
 }
