feat: 增强文件管理和会话管理功能
- 新增后端文件操作命令：delete、rename、copy、move
- FileExplorer 支持右键菜单、拖拽移动、复制粘贴、重命名
- ChatSidebar/WorkspaceSidebar 添加清空会话功能
- ServiceSettings 禁用暂不支持的远程服务选项
- 新增相关中英文国际化文本

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -77,6 +77,22 @@
       "selectSession": "Select a session to view project files",
       "empty": "Directory is empty",
       "loadError": "Failed to load"
+    },
+    "contextMenu": {
+      "deleteSession": "Delete Session",
+      "clearAll": "Clear All Sessions",
+      "clearAllConfirm": "Are you sure you want to clear all sessions? This action cannot be undone."
+    },
+    "explorerContextMenu": {
+      "newFile": "New File",
+      "delete": "Delete",
+      "rename": "Rename",
+      "copy": "Copy",
+      "paste": "Paste",
+      "deleteConfirm": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone.",
+      "newName": "New name",
+      "renameTitle": "Rename",
+      "enterNewName": "Enter new name"
     }
   },
   "chat": {
@@ -191,6 +207,8 @@
       "localDescription": "Use local OpenCode service, suitable for offline use",
       "remote": "Remote Service",
       "remoteDescription": "Connect to remote OpenCode server",
+      "remoteNotSupported": "Currently only local service is supported",
+      "comingSoon": "Coming Soon",
       "remoteUrl": "Remote Service URL:",
       "remoteUrlPlaceholder": "Enter remote service URL",
       "remoteUrlHint": "e.g., http://localhost:8080",
