--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -77,6 +77,22 @@
       "selectSession": "选择一个会话以查看项目文件",
       "empty": "目录为空",
       "loadError": "加载失败"
+    },
+    "contextMenu": {
+      "deleteSession": "删除会话",
+      "clearAll": "清除全部会话",
+      "clearAllConfirm": "确定要清除所有会话吗？此操作不可恢复。"
+    },
+    "explorerContextMenu": {
+      "newFile": "新建文件",
+      "delete": "删除",
+      "rename": "重命名",
+      "copy": "复制",
+      "paste": "粘贴",
+      "deleteConfirm": "确定要删除 \"{{name}}\" 吗？此操作不可恢复。",
+      "newName": "新名称",
+      "renameTitle": "重命名",
+      "enterNewName": "请输入新名称"
     }
   },
   "chat": {
@@ -192,6 +208,8 @@
       "localDescription": "使用本地 OpenCode 服务，适合离线使用",
       "remote": "远程服务",
       "remoteDescription": "连接到远程 OpenCode 服务器",
+      "remoteNotSupported": "目前仅支持本地服务",
+      "comingSoon": "敬请期待",
       "remoteUrl": "远程服务地址:",
       "remoteUrlPlaceholder": "请输入远程服务 URL",
       "remoteUrlHint": "例如: http://localhost:8080",
