feat: 增强 Provider OAuth 授权和配置管理功能
- 新增 OAuth 授权流程支持，可选择 OAuth 或 API Key 认证方式
- 后端删除 provider 时同步清理 auth.json 和 config.json
- 优化编辑模式，支持已连接但无本地配置的 provider 直接配置
- 新增模型白名单/黑名单过滤和自定义 Headers 管理
- 新增 LSP 状态显示组件 (LspStatusBadge/LspStatusButton)
- 改进刷新机制，通过重启 OpenCode 服务应用配置变更

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -433,15 +433,28 @@
     "unknown": "Unknown status",
     "tools": "Tools",
     "availableTools": "Available Tools",
+    "totalCount": "{{count}} in total",
     "totalTools": "{{count}} tools in total",
     "noTools": "No tools available",
     "inherited": "Inherited",
     "inheritedTooltip": "Using default permission",
-    "permissionHint": "Click to quickly change permission",
+    "permissionHint": "Hover to change permission",
+    "changePermission": "Change Permission",
+    "permissionAllow": "Allow",
+    "permissionAsk": "Ask",
+    "permissionDeny": "Deny",
     "permissionRestarting": "Restarting service to apply permission configuration...",
     "permissionUpdated": "Permission updated",
     "permissionRestartFailed": "Service restart failed, permission configuration will take effect on next startup",
-    "permissionSaveFailed": "Failed to save permission configuration"
+    "permissionSaveFailed": "Failed to save permission configuration",
+    "lspServers": "Language Servers",
+    "noLspServers": "No LSP servers",
+    "lspHint": "LSPs will activate as files are read",
+    "lspConnected": "connected",
+    "lspError": "errors",
+    "lspConnectedHint": "Connected",
+    "lspErrorHint": "Connection failed",
+    "lspMoreServers": "{{count}} more servers"
   },
   "questionPrompt": {
     "otherCustom": "Other (custom input)",
