--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -433,15 +433,28 @@
     "unknown": "未知状态",
     "tools": "工具",
     "availableTools": "可用工具",
+    "totalCount": "共 {{count}} 个",
     "totalTools": "共 {{count}} 个工具",
     "noTools": "暂无可用工具",
     "inherited": "继承",
     "inheritedTooltip": "使用默认权限",
-    "permissionHint": "点击权限可快速修改",
+    "permissionHint": "悬停工具项可修改权限",
+    "changePermission": "修改权限",
+    "permissionAllow": "允许",
+    "permissionAsk": "询问",
+    "permissionDeny": "拒绝",
     "permissionRestarting": "正在重启服务以应用权限配置...",
     "permissionUpdated": "权限已更新",
     "permissionRestartFailed": "服务重启失败，权限配置将在下次启动时生效",
-    "permissionSaveFailed": "保存权限配置失败"
+    "permissionSaveFailed": "保存权限配置失败",
+    "lspServers": "语言服务器",
+    "noLspServers": "暂无 LSP 服务器",
+    "lspHint": "LSP 将在读取文件时自动激活",
+    "lspConnected": "已连接",
+    "lspError": "错误",
+    "lspConnectedHint": "已连接",
+    "lspErrorHint": "连接失败",
+    "lspMoreServers": "还有 {{count}} 个服务器"
   },
   "questionPrompt": {
     "otherCustom": "其他（自定义输入）",
