feat: 添加集成终端功能
- 新增前端终端组件 (TerminalPanel, TerminalTabs, TerminalToolbar)
- 新增 Rust 后端终端管理 (portable-pty 支持)
- 在 RootLayout 中添加可调整大小的终端面板
- StatusBar 添加终端切换按钮
- 终端面板高度持久化到布局配置
- 修复 OpencodeProvider 初始化状态同步问题
- 修复 OpenCode 服务状态检测逻辑

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -31,6 +31,7 @@
     "chat": "会话",
     "search": "搜索",
     "extensions": "扩展",
+    "terminal": "终端",
     "moveToLeft": "移动到左侧",
     "moveToRight": "移动到右侧",
     "hideSidebar": "隐藏侧边栏",
@@ -80,6 +81,7 @@
     },
     "contextMenu": {
       "deleteSession": "删除会话",
+      "clearSessions": "清空会话",
       "clearAll": "清除全部会话",
       "clearAllConfirm": "确定要清除所有会话吗？此操作不可恢复。"
     },
@@ -106,6 +108,7 @@
     "thinking": "思考中...",
     "welcome": "你好！我是 Axon AI 助手，有什么可以帮助你的吗？",
     "welcomeTitle": "准备好开始了吗？",
+    "welcomeSubtitle": "开始与 AI 助手对话，获取智能帮助",
     "errorMessage": "抱歉，发生了错误，请重试。",
     "emptyState": {
       "title": "开始对话",
@@ -131,6 +134,7 @@
     "history": "历史记录",
     "user": "你",
     "assistant": "Axon",
+    "agent": "代理",
     "selectModel": "选择模型",
     "noModels": "暂无可用模型",
     "loadingModels": "加载模型中...",
