feat: 支持项目目录切换与 Subagent 状态同步修复
- 新增项目目录配置，切换项目时自动重启 OpenCode 服务
- 改进 Windows 更新策略，使用重命名替代直接删除避免文件锁定
- 修复 Subagent 任务完成状态未正确显示的问题

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,6 +21,8 @@
     "settings": "Settings",
     "default": "Default",
     "defaultWorkspace": "Default Workspace",
+    "switchingProject": "Switching project directory...",
+    "projectSwitched": "Project directory switched, Agent list updated",
     "theme": {
       "light": "Light Mode",
       "dark": "Dark Mode",
