--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -21,6 +21,8 @@
     "settings": "设置",
     "default": "默认",
     "defaultWorkspace": "默认工作区",
+    "switchingProject": "正在切换项目目录...",
+    "projectSwitched": "项目目录已切换，Agent 列表已更新",
     "theme": {
       "light": "浅色模式",
       "dark": "深色模式",
