feat: 添加编排工作流可视化和 Plugin API
用户现在可以通过新的「编排」页面使用可视化界面来设计和管理多代理工作流。

用户面向的变化：
- 在活动栏添加「编排」按钮，用户可点击导航到编排页面
- 提供完整的工作流编排UI，包括侧边栏（新增/管理工作流）和可视化编排画布
- 支持创建、保存和删除工作流
- 编排页面保持与聊天页面一致的 ActivityBar + Sidebar 布局

技术变化：
- 新增 Plugin API 服务器（默认端口 23517），作为 OpenCode 插件与 Axon 后端的桥接
- Plugin API 支持 Agent 配置管理、事件接收、工作流执行等功能
- 环境变量 AXON_RUNNING 标识由 Axon 启动的 opencode 实例
- 环保程序自动注入 AXON_BRIDGE_PORT 告知插件 API 服务地址
- 新增 axon-bridge 插件提供 Axon 的二进制管理和进程控制能力

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -33,6 +33,7 @@
     "chat": "Chat",
     "search": "Search",
     "extensions": "Extensions",
+    "orchestration": "Orchestration",
     "moveToLeft": "Move to Left",
     "moveToRight": "Move to Right",
     "hideSidebar": "Hide Sidebar",
@@ -532,6 +533,26 @@
     "serviceStarted": "Service started",
     "serviceStopped": "Service stopped",
     "languageChanged": "Language changed"
+  },
+  "orchestration": {
+    "title": "Orchestration",
+    "newWorkflow": "New Workflow",
+    "save": "Save",
+    "noWorkflow": "No workflow selected",
+    "emptyTitle": "Start Creating Workflow",
+    "emptyDescription": "Click the + button on the left to create a new workflow",
+    "nodes": {
+      "agent": "Agent Node",
+      "tool": "Tool Node",
+      "condition": "Condition Node",
+      "start": "Start",
+      "end": "End"
+    },
+    "nodeLabels": {
+      "agent": "Agent",
+      "tool": "Tool",
+      "condition": "Condition"
+    }
   },
   "permissions": {
     "types": {
