feat(orchestration): 添加子 Agent 编排和 Workflow 后端支持
- 新增 Workflow 命令模块和 CRUD API
- 扩展 Agent 类型支持子 Agent 配置和委托规则
- 重构编排页面为三栏布局（列表 + 画布 + 配置）
- 添加 AgentCanvas 画布组件和子 Agent 添加对话框

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -536,6 +536,9 @@
   },
   "orchestration": {
     "title": "Orchestration",
+    "agents": "Agent List",
+    "createAgent": "Create Agent",
+    "searchAgents": "Search Agents...",
     "newWorkflow": "New Workflow",
     "save": "Save",
     "noWorkflow": "No workflow selected",
