feat: 新增 PDF、Word、Excel 文档预览功能
- 添加 PdfViewer、WordViewer、ExcelViewer 组件
- 集成 pdfjs-dist、mammoth、xlsx 解析库
- 使用懒加载优化性能
- 添加 fileType 工具统一文件类型检测
- 更新 i18n 支持

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -23,6 +23,8 @@
     "defaultWorkspace": "Default Workspace",
     "switchingProject": "Switching project directory...",
     "projectSwitched": "Project directory switched, Agent list updated",
+    "showSubagentPanel": "Show Subagent Panel",
+    "hideSubagentPanel": "Hide Subagent Panel",
     "theme": {
       "light": "Light Mode",
       "dark": "Dark Mode",
@@ -483,6 +485,14 @@
     "agentsHint": "Use @ to mention subagents",
     "primary": "Primary",
     "subagent": "Subagent"
+  },
+  "editor": {
+    "refresh": "Refresh file",
+    "closeTab": "Close",
+    "closeOthers": "Close Others",
+    "closeAll": "Close All",
+    "emptyFile": "File is empty",
+    "externallyModified": "File modified externally, click refresh to view"
   },
   "usagePanel": {
     "title": "Usage",
